fixed a bug with adding vertical scrollbar on mobile devices

--- a/src/app/components/apod/apod.component.css
+++ b/src/app/components/apod/apod.component.css
@@ -60,6 +60,9 @@ img {
     min-height: 100vh;
   }
 
+  .loading {
+    font-size: 4rem;
+  }
   .textContainer {
     max-width: 70%;
   }
