--- a/src/styles.css
+++ b/src/styles.css
@@ -22,7 +22,7 @@ body {
 
 main {
   height: 100%;
-  min-height: 90vh;
+  min-height: 80vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
